# WolvWealth

./: .gitignore  README.md  backtest.py  gunicorn_config.py  historical_prices.csv  package-lock.json  package.json  prices.json  pyproject.toml  requirements.txt  tailwind.config.js  ticker_universe.csv  webpack.config.js
sql/: data.sql  schema.sql
var/: wolvwealth.sqlite3
wolvwealth/: __init__.py  config.py  model.py  pyproject.toml
wolvwealth/api/: __init__.py  admin.py  api_exceptions.py  auth.py  main.py  optimize.py  state.py  tickers.py
wolvwealth/js/: App.jsx  index.jsx  main.jsx
wolvwealth/js/components/: contact.jsx  data.jsx  help.jsx
wolvwealth/js/pages/: optimizer.jsx
wolvwealth/sql/: data.sql  schema.sql
wolvwealth/static/css/: input.css  output.css  util.css
wolvwealth/static/html/: index.html
wolvwealth/static/js/: bundle.js.map
wolvwealth/templates/: account.html  dashboard.html  index.html  login.html  optimizer.html  profile.html  register.html
wolvwealth/views/: __init__.py  account.py  accounts.py  dashboard.py  index.py  login.py  optimizer.py  profile.py  register.py
