[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wolvwealth"
version = "1.1.0"
dependencies = [
    "arrow",
    "bs4",
    "Flask",
    "html5validator",
    "pycodestyle",
    "pydocstyle",
    "pylint",
    "pytest",
    "pyportfolioopt",
    "requests",
]
requires-python = ">=3.10"

[tool.setuptools]
packages = ["wolvwealth"]

[tool.pylint."messages control"]
disable = ["cyclic-import"]

[tool.black]
line-length = 120
target-version = ["py38", "py39", "py310"]

